--- a/LightSpeech/requirements.txt
+++ b/LightSpeech/requirements.txt
@@ -2,26 +2,26 @@ torch>=1.2.0
 pyworld
 pysptk
 matplotlib
-librosa
+librosa==0.10.0.post2
 tqdm
 pandas
-numba==0.48.0
+numba==0.57.1
 numpy
 requests
-scipy==1.3
+scipy
 sympy
 PyYAML
 tensorboardX
 pillow
 pyloudnorm
-pytorch_lightning==0.6.0
+pytorch_lightning
 setuptools>=41.0.0
 miditoolkit==0.1.7
-sklearn
 g2p_en
 webrtcvad
-tensorboard==1.15.0
-scikit-learn==0.22.0
+tensorboard
+scikit-learn<1.3.0
 scikit-image==0.16.2
 textgrid
 parallel_wavegan==0.4.0
+protobuf<3.21
